--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "poc-chat-graphql",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:1337",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "graphiql": "^0.8.1",
+    "http-proxy-middleware": "^0.17.3",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
@@ -10,6 +15,8 @@
     "apollo-local-query": "^0.2.0",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.1",
+    "http": "0.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-apollo": "^0.8.1",
@@ -19,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "babel-node src/server.js --presets es2015,stage-2"
   }
 }
