--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-client": "^0.6.0",
     "apollo-local-query": "^0.2.0",
+    "firebase": "^3.6.4",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.1",
     "http": "0.0.0",
