--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^3.6.4",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.1",
+    "graphql-tools": "^0.9.0",
     "http": "0.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
